--- a/0-preface.qmd
+++ b/0-preface.qmd
@@ -32,25 +32,25 @@ The book is equally valuable for continuing education and professional developme
 
 ## Skills You Will Gain {.unnumbered .unlisted}
 
-This book guides you through a practical and progressive journey into data science and machine learning using R, structured around the *Data Science Workflow* (Figure [-@fig-ch0_DSW]), which emphasizes how to move from a clearly defined problem to a data-driven solution using statistical analysis and machine learning. Each chapter is designed to support both conceptual understanding and applied skill development, guiding readers from formulating analytical questions and preparing data to building, evaluating, and interpreting models.
+This book guides you through a practical and progressive journey into data science and machine learning using R, structured around the *Data Science Workflow* (Figure [-@fig-ch0_DSW]). The workflow emphasizes how to move from a clearly defined problem to a data-driven solution through statistical analysis and machine learning. Each chapter supports both conceptual understanding and applied skill development, guiding readers from formulating analytical questions and preparing data to building, evaluating, and interpreting models.
 
 By the end of this book, you will be able to:
 
--   *Identify and explain* the key stages of a data science project, from problem formulation and data preparation to modeling and evaluation;
+- *Identify and explain* the key stages of a data science project, from problem formulation and data preparation to modeling and evaluation;
 
--   *Apply* core R programming concepts, including data structures, control flow, and functions, to explore, prepare, and analyze data;
+- *Apply* core R programming concepts, including data structures, control flow, and functions, to explore, prepare, and analyze data;
 
--   *Prepare and transform* raw datasets by addressing missing values, outliers, and categorical variables using established best practices;
+- *Prepare and transform* raw datasets by addressing missing values, outliers, and categorical variables using established best practices;
 
--   *Explore and interpret* data through descriptive statistics and effective visualizations;
+- *Explore and interpret* data using descriptive statistics and effective visualizations;
 
--   *Build, tune, and interpret* machine learning models for classification, regression, and clustering using methods such as k-nearest neighbors, Naive Bayes, decision trees, neural networks, and K-means clustering;
+- *Build, tune, and interpret* machine learning models for classification, regression, and clustering, including methods such as k-nearest neighbors, Naive Bayes, decision trees, neural networks, and K-means clustering;
 
--   *Evaluate and compare* model performance using appropriate metrics tailored to different analytical tasks;
+- *Evaluate and compare* model performance using appropriate metrics tailored to different analytical tasks;
 
--   *Apply and adapt* data science techniques to real-world problems in domains such as marketing, finance, operations, and the social sciences.
+- *Apply and adapt* data science techniques to real-world problems in domains such as marketing, finance, operations, and the social sciences.
 
-Throughout the book, these skills are reinforced through illustrative examples, annotated R code, and practice-oriented exercises. Each chapter concludes with a case study that synthesizes the main concepts and demonstrates how methods can be applied in realistic settings. By the end of the book, readers are equipped not only with familiarity with data science tools, but also with the ability to apply them critically and effectively in practice.
+Throughout the book, these skills are reinforced through illustrative examples, annotated R code, and practice-oriented exercises. Each chapter concludes with a case study that synthesizes the main concepts and demonstrates how methods can be applied in realistic settings. By the end of the book, readers are equipped not only with familiarity with data science tools, but also with the ability to apply them critically, responsibly, and effectively in practice.
 
 ## Requirements and Expectations {.unnumbered .unlisted}
 
