--- a/1-Intro-R.qmd
+++ b/1-Intro-R.qmd
@@ -1279,20 +1279,41 @@ The exercises below are designed to reinforce your understanding of the tools an
 
 16. Create an R Markdown report that includes a title and your name, at least one code chunk exploring the `churn` dataset, and at least one visualization. Render the report to HTML.
 
-#### More Challenging Exercises {.unnumbered .unlisted}
+#### More Challenging Exercises {.unnumbered}
 
-17. Use R and **ggplot2** to recreate Figure [-@fig-ch1-tiny-gains], which illustrates the compounding effect of small improvements. First, generate a data frame containing three curves: $y = (1.01)^x$ (1% improvement per day), $y = (0.99)^x$ (1% decline per day), and $y = 1$ (no change). Then use `geom_line()` to plot the curves. Customize line colors and add informative labels using `annotate()`. *Hint:* Refer to Section [-@sec-ch1-visualization].
+17. Load the `drug` dataset from the **liver** package and explore its structure using `summary()`. This dataset will be revisited in Chapter [-@sec-ch7-classification-knn].
 
-18. Extend the Tiny Gains plot by changing the x-axis label to `"Days of Practice"`, applying a theme such as `theme_minimal()`, adding the title `"The Power of Consistent Practice"`, and saving the plot using `ggsave()` as a PDF or PNG file.
+18. Create a scatter plot of `age` versus `ratio`, using both color and shape to distinguish the variable `type`.
 
-19. In the previous exercise, change the number of days shown in the plot. Compare the results for 30 days and 365 days. What differences do you observe?
+19. Add a new variable `outcome` to the `drug` dataset as follows: observations with `type == "A"` should have a higher probability of a `"Good"` outcome, while observations with `type == "B"` or `type == "C"` should have a lower probability of a `"Good"` outcome. Use a random mechanism to generate this variable and set a random seed to ensure reproducibility.
+
+20. Create a scatter plot of `age` versus `ratio`, colored by the newly created `outcome` variable.
+
+21. Create a new categorical variable `age_group` with three levels: `"Young"` if age $\leq 30$, `"Middle-aged"` if $31 \leq$ age $\leq 50$, and `"Senior"` if age $> 50$.
+
+22. Calculate the mean value of `ratio` for each `age_group`.
+
+23. Use **ggplot2** to create a bar chart showing the average `ratio` by `age_group`.
+
+24. Create a new variable defined as 
+    $$\mathrm{risk\_factor} = \frac{\mathrm{ratio} \times \mathrm{age}}{10}.$$
+    Summarize how `risk_factor` differs across levels of `type`.
+
+25. Visualize `risk_factor` in two ways: first, create a histogram grouped by `type`; then create a boxplot grouped by `outcome`.
+
+26. Use R and **ggplot2** to recreate Figure [-@fig-ch1-tiny-gains], which illustrates the compounding effect of small improvements. First, generate a data frame containing three curves: $y = (1.01)^x$ (1% improvement per day), $y = (0.99)^x$ (1% decline per day), and $y = 1$ (no change). Then use `geom_line()` to plot the curves. Customize line colors and add informative labels using `annotate()`.
+    *Hint:* Refer to Section [-@sec-ch1-visualization].
+
+27. Extend the Tiny Gains plot by changing the x-axis label to `"Days of Practice"`, applying a theme such as `theme_minimal()`, adding the title `"The Power of Consistent Practice"`, and saving the plot using `ggsave()` as a PDF or PNG file.
+
+28. In the previous exercise, change the number of days displayed in the plot. Compare the results for 30 days and 365 days. What differences do you observe?
 
 #### Reflect and Connect {.unnumbered .unlisted}
 
 The following questions encourage you to reflect on your learning and connect the chapter content to your own goals.
 
-20. Which concepts in this chapter felt most intuitive, and which did you find most challenging?
+29. Which concepts in this chapter felt most intuitive, and which did you find most challenging?
 
-21. How might the skills introduced in this chapter support data analysis in your own field of study or research?
+30. How might the skills introduced in this chapter support data analysis in your own field of study or research?
 
-22. By the end of this book, what would you like to be able to accomplish with R?
+31. By the end of this book, what would you like to be able to accomplish with R?
