--- a/5-Statistics.qmd
+++ b/5-Statistics.qmd
@@ -34,7 +34,7 @@ This chapter emphasizes that sound inference relies on more than formulas or com
 
 This chapter introduces statistical inference, a set of methods that allow us to draw conclusions about populations using information from samples. Building on the exploratory work of earlier chapters, the focus now shifts from identifying patterns to evaluating whether those patterns reflect meaningful population-level effects. This transition is a central step in the data science workflow, where initial insights are tested and uncertainty is quantified.
 
-The chapter begins with point estimation, where sample statistics are used to estimate unknown population parameters. It then introduces confidence intervals, which provide a principled way to express the uncertainty associated with these estimates. Hypothesis testing follows, offering a framework for assessing whether observed differences or associations are likely to have arisen by chance. Along the way, you will work with several real-world datasets, including `churn` and *diamonds* in the main text, and the *bank*, `churn_mlc`, and *marketing* datasets from the **liver** package in the exercises.
+The chapter begins with point estimation, where sample statistics are used to estimate unknown population parameters. It then introduces confidence intervals, which provide a principled way to express the uncertainty associated with these estimates. Hypothesis testing follows, offering a framework for assessing whether observed differences or associations are likely to have arisen by chance. Along the way, you will work with several real-world datasets, including `churn` and `diamonds` in the main text, and the `bank`, `churn_mlc`, and `marketing` datasets from the **liver** package in the exercises.
 
 Throughout the chapter, you will apply these inferential tools in R to evaluate patterns, interpret p-values and confidence intervals, and distinguish statistical significance from practical relevance. These skills form the basis for reliable, data-driven conclusions and support the Modeling work that follows.
 
@@ -483,8 +483,7 @@ table_marital <- table(churn$churn, churn$marital,
 table_marital
 ```
 
-This table serves as the input to the `chisq.test()` function, which assesses whether two categorical variables are independent. The hypotheses are:
-$$
+This table serves as the input to the `chisq.test()` function, which assesses whether two categorical variables are independent. The hypotheses are: $$
 \begin{cases}
 H_0: \pi_{\text{divorced, yes}} = \pi_{\text{married, yes}} = \pi_{\text{single, yes}} \\
 H_a: \text{At least one proportion differs.}
@@ -520,7 +519,7 @@ So far, we have examined hypothesis tests that compare two groups, such as the *
 
 ANOVA is especially useful for evaluating how a categorical factor with more than two levels affects a numerical outcome. It assesses whether the variability between group means is greater than what would be expected due to random sampling alone. The test statistic follows an F-distribution, which compares variance across and within groups.
 
-To illustrate, consider the *diamonds* dataset from the **ggplot2** package. We analyze whether the mean price (`price`) differs by cut quality (`cut`), which has five levels: "Fair," "Good," "Very Good," "Premium," and "Ideal."
+To illustrate, consider the `diamonds` dataset from the **ggplot2** package. We analyze whether the mean price (`price`) differs by cut quality (`cut`), which has five levels: "Fair," "Good," "Very Good," "Premium," and "Ideal."
 
 ```{r}
 data(diamonds)   
@@ -552,7 +551,7 @@ As with any statistical method, ANOVA has assumptions: independent observations,
 
 From a business perspective, understanding differences in price across cut levels supports pricing, inventory, and marketing decisions. For example, if higher-quality cuts consistently command higher prices, retailers may emphasize them in promotions. Conversely, if mid-tier cuts show similar prices, pricing strategies may be reconsidered to align with customer perceptions of value.
 
-> *Practice:* Use ANOVA to test whether the average carat (`carat`) differs across clarity levels (`clarity`) in the *diamonds* dataset. Fit the model using `aov(carat ~ clarity, data = diamonds)` and examine the ANOVA output. For a visual comparison, create a boxplot similar to the one used for cut quality.
+> *Practice:* Use ANOVA to test whether the average carat (`carat`) differs across clarity levels (`clarity`) in the `diamonds` dataset. Fit the model using `aov(carat ~ clarity, data = diamonds)` and examine the ANOVA output. For a visual comparison, create a boxplot similar to the one used for cut quality.
 
 ## Correlation Test {#sec-ch5-correlation-test}
 
@@ -560,7 +559,7 @@ Suppose you are analysing sales data and notice that as advertising spend increa
 
 The correlation test evaluates both the **strength** and **direction** of a linear relationship by testing the null hypothesis that the population correlation coefficient ($\rho$) is equal to zero. This test is particularly useful when examining how continuous variables co-vary—insights that can guide pricing strategies, forecasting models, and feature selection in predictive analytics.
 
-To illustrate, we test the relationship between `carat` (diamond weight) and `price` in the *diamonds* dataset from the **ggplot2** package. A positive relationship is expected: larger diamonds typically command higher prices. We begin with a scatter plot to visually explore the trend:
+To illustrate, we test the relationship between `carat` (diamond weight) and `price` in the `diamonds` dataset from the **ggplot2** package. A positive relationship is expected: larger diamonds typically command higher prices. We begin with a scatter plot to visually explore the trend:
 
 ```{r}
 ggplot(diamonds, aes(x = carat, y = price)) +
@@ -642,7 +641,7 @@ This set of exercises is designed to help you consolidate and apply what you hav
 
 #### Hands-On Practice: Hypothesis Testing in R {.unnumbered}
 
-For the following exercises, use the `churn_mlc`, *bank*, *marketing*, and *diamonds* datasets available in the **liver** and **ggplot2** packages. We have previously used the `churn_mlc`, *bank*, and *diamonds* datasets in this and earlier chapters. In @sec-ch10-regression, we will introduce the *marketing* dataset for regression analysis.
+For the following exercises, use the `churn_mlc`, `bank`, `marketing`, and `diamonds` datasets available in the **liver** and **ggplot2** packages. We have previously used the `churn_mlc`, `bank`, and `diamonds` datasets in this and earlier chapters. In @sec-ch10-regression, we will introduce the `marketing` dataset for regression analysis.
 
 To load the datasets, use the following commands:
 
@@ -718,7 +717,7 @@ t.test(customer_calls ~ churn, data = churn_mlc)
 
 State the null and alternative hypotheses. Determine whether to reject the null hypothesis at a significance level of $\alpha=0.05$. Report the *p*-value and interpret the results, explaining whether there is evidence of a relationship between churn status and customer service call frequency.
 
-15. In the *marketing* dataset, we test whether there is a *positive* relationship between `revenue` and `spend` at a significance level of $\alpha = 0.025$. We perform a one-tailed correlation test using:
+15. In the `marketing` dataset, we test whether there is a *positive* relationship between `revenue` and `spend` at a significance level of $\alpha = 0.025$. We perform a one-tailed correlation test using:
 
 ```{r}
 cor.test(x = marketing$spend, 
@@ -735,7 +734,7 @@ State the null and alternative hypotheses. Report the *p*-value and determine wh
 
 18. In the `churn_mlc` dataset, test whether there is a relationship between the target variable “`churn`” and the variable “`intl_charge`” with $\alpha=0.05$.
 
-19. In the *bank* dataset, test whether there is a relationship between the target variable “`deposit`” and the variable “`education`” with $\alpha=0.05$.
+19. In the `bank` dataset, test whether there is a relationship between the target variable “`deposit`” and the variable “`education`” with $\alpha=0.05$.
 
 20. Compute the proportion of customers in the `churn_mlc` dataset who have an International Plan (`intl_plan`). Construct a 95% confidence interval for this proportion using R, and interpret the confidence interval in the context of customer subscriptions.
 
@@ -745,11 +744,11 @@ State the null and alternative hypotheses. Report the *p*-value and determine wh
 
 23. Test whether the proportion of customers with a Voice Mail Plan (`voice_plan`) differs between churners and non-churners. Use a two-sample Z-test in R and interpret the results, considering the implications for customer retention strategies.
 
-24. Investigate whether marital status (`marital`) is associated with deposit subscription (`deposit`) in the *bank* dataset. Construct a contingency table and perform a Chi-square test to assess whether marital status has a significant impact on deposit purchasing behavior.
+24. Investigate whether marital status (`marital`) is associated with deposit subscription (`deposit`) in the `bank` dataset. Construct a contingency table and perform a Chi-square test to assess whether marital status has a significant impact on deposit purchasing behavior.
 
-25. Using the *diamonds* dataset, test whether the mean price of diamonds differs across different diamond cuts (`cut`). Conduct an ANOVA test and interpret the results. If the test finds significant differences, discuss how post-hoc tests could be used to further explore the findings.
+25. Using the `diamonds` dataset, test whether the mean price of diamonds differs across different diamond cuts (`cut`). Conduct an ANOVA test and interpret the results. If the test finds significant differences, discuss how post-hoc tests could be used to further explore the findings.
 
-26. Assess the correlation between `carat` and `price` in the *diamonds* dataset. Perform a correlation test in R and visualize the relationship using a scatter plot. Interpret the results in the context of diamond pricing.
+26. Assess the correlation between `carat` and `price` in the `diamonds` dataset. Perform a correlation test in R and visualize the relationship using a scatter plot. Interpret the results in the context of diamond pricing.
 
 27. Construct a 95% confidence interval for the mean number of customer service calls (`customer_calls`) among churners. Explain how the confidence interval helps quantify uncertainty and how it might inform business decisions regarding customer support.
 
