--- a/index.qmd
+++ b/index.qmd
@@ -7,7 +7,8 @@
 source("_common.R")
 ```
 
-\cleardoublepage
+
+\clearpage
 \thispagestyle{empty}
 
 \vspace*{0.33\textheight}
@@ -19,7 +20,7 @@ source("_common.R")
 \end{minipage}
 \end{center}
 
-\cleardoublepage
+\clearpage
 
 ```{asis index-1, echo=knitr::is_html_output()}
 # Welcome {-}
