--- a/template.tex
+++ b/template.tex
@@ -66,7 +66,17 @@
   {\end{quote}\vspace{2em}}
 
 %%%%%%%%%%%%%%
-
+% --- Make sure the TOC does NOT add itself as an entry ---
+\makeatletter
+\let\origtableofcontents\tableofcontents
+\renewcommand{\tableofcontents}{%
+  \begingroup
+  \let\addcontentsline\@gobblethree
+  \let\addtocontents\@gobbletwo
+  \origtableofcontents
+  \endgroup
+}
+\makeatother
 
 
 
